--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./favicon-image.png"
   </head>
   <body>
     <h1 class="heading">🏀Basketball Counter🏀</h1>
