changed the styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="./favicon-image.png"
   </head>
   <body>
-    <h1 class="heading">🏀Basketball Counter🏀</h1>
+    <h1 class="heading">Basketball Counter</h1>
     <div class="main">
       <div class="home">
         <h1 class="title">HOME</h1>
@@ -27,11 +27,9 @@
         </div>
       </div>
       <div class="middle">
+        <button class="newgame" id="newgame" onclick="reset()">Reset</button>
         <button class="newperiod" id="period" onclick="newperiod()">
           New Period
-        </button>
-        <button class="newgame" id="newgame" onclick="reset()">
-          New Game🏀
         </button>
         <p class="period" id="periodDisplay"></p>
       </div>
